Refactored the pagination slider to be its own component and updated a styling bug that was causing alignment error for that slider. It was simply because the slider was being exported inside a div, so I just removed the div

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -326,10 +326,6 @@ a {
     font-size: 1.55rem;
 }
 
-.Search-Slider {
-  margin: 60px 500px 80px;
-}
-
 /* //////////////////////////////////////  SEARCH SELECT LANGUAGE  ////////////////////////////////////// */
 
 .Search-Language {
@@ -384,6 +380,17 @@ a {
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
   background-color: #3e8e41;
+}
+
+/* //////////////////////////////////////  FLASH MESSAGE  ////////////////////////////////////// */
+
+.Pagination-Slider {
+ margin: 60px 500px 80px;
+
+}
+
+.Danceability-Slider {
+  margin: 60px 500px 80px;
 }
 
 /* //////////////////////////////////////  FLASH MESSAGE  ////////////////////////////////////// */
